     - 802.11n initial support for A-MSDU frame aggregation (Mirko Banchi)
     - aarf-cd and cara rate control algorithms (Federico Maguolo)
  b) 802.11 PHY:
     - 802.11b PHY support (Gary Pei)
     - Nakagami propagation loss model (Timo Bingmann)
  c) GammaVariable and ErlangVariable (Timo Bingmann)
 
API changes from ns-3.4
-----------------------
API changes for this release are documented in the file CHANGES.html

Release 3.4
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-3.4.tar.bz2

Supported platforms
-------------------
ns-3.4 has been tested on the following platforms:
  - linux x86 gcc 4.2, 4.1, and, 3.4.6.
  - linux x86_64 gcc 4.3.2, 4.2.3, 4.2.1, 4.1.3, 3.4.6
  - MacOS X ppc and x86
  - cygwin gcc 3.4.4 (debug only)

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------
  a) Wifi models: Timo Bingman contributed a ThreeLogDistance and a Nakagami
     propagation loss model based on the ns-2 models. Fabian Mauchle contributed
     multicast support.

  b) Object Name Service:  A facility allowing ns-3 Objects to be assigned
     names has been added.

  c) Tap Bridge:  A second option for integrating ns-3 with real-world hosts
     has been added.  This allows for real hosts to talk over ns-3 net devices
     and simulated networks.

  d) A new build option (ns-3-allinone) has been provided to make it easier for
     users to download and bulid commonly used ns-3 configurations.

  e) The ns-3 calendar queue scheduler has been ported to ns-3.

  f) XML support has been added to the ConfigStore.

API changes from ns-3.3
-----------------------
API changes for this release are documented in the file CHANGES.html

Known issues
------------
ns-3 build is known to fail on the following platforms:
  - gcc 3.3 and earlier