@@ -29,7 +29,9 @@ New user-visible features
  
 API changes from ns-3.4
 -----------------------
-API changes for this release are documented in the file CHANGES.html
+API changes for this release are documented in the file CHANGES.html.  The
+internal API and composition of the IPv4 stack underwent significant
+refactoring in this release cycle.
 
 Release 3.4
 ===========
